[gd_scene load_steps=7 format=3 uid="uid://cgmncgyu5lbm0"]

[ext_resource type="Script" path="res://scenes/menu/Settings.gd" id="1_frl8x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g85o5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gcyet"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1olwg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bun1c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6h731"]

[node name="Settings" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.203922, 0.643137, 1)
script = ExtResource("1_frl8x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="BackContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MenuOptions/BackContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_g85o5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gcyet")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1olwg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bun1c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6h731")
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer"]
layout_mode = 2

[node name="DifficultyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Difficulty"

[node name="DifficultyList" type="ItemList" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/DifficultyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 3
item_0/text = "Easy"
item_1/text = "Medium"
item_2/text = "Hard"

[node name="WinningScoreContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WinningScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/WinningScoreContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Winning Score"

[node name="WinningScore" type="SpinBox" parent="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/WinningScoreContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOptions/BackContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/DifficultyContainer/DifficultyList" to="." method="_on_difficulty_list_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MenuOptions/MarginContainer/VBoxContainer/WinningScoreContainer2/WinningScore" to="." method="_on_winning_score_value_changed"]
